WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Activity type of the task</description>
    <inlineHelpText>Activity type of the task</inlineHelpText>
    <label>Activity Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>