WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <description>Task Owner</description>
    <inlineHelpText>Task Owner</inlineHelpText>
    <label>AssignedTo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>