WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments of the task</description>
    <inlineHelpText>Comments of the task</inlineHelpText>
    <label>Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>