WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/CouponCode__c.field-meta.xml
<CustomField>
    <fullName>CouponCode__c</fullName>
    <description>The coupon code on the Opportunity</description>
    <inlineHelpText>The coupon code on the Opportunity</inlineHelpText>
    <label>CouponCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>