WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>Endpoint URL</description>
    <inlineHelpText>Endpoint URL</inlineHelpText>
    <label>Endpoint URL</label>
    <type>Url</type>
</CustomField>