WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <description>the Error Log on the Opportunity</description>
    <inlineHelpText>the Error Log on the Opportunity</inlineHelpText>
    <label>Error Log</label>
    <length>20</length>
    <type>Text</type>
</CustomField>