WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/Outbound_Message__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Message__c</fullName>
    <description>ID of Outbound message to send.</description>
    <inlineHelpText>ID of Outbound message to send.</inlineHelpText>
    <label>Outbound Message</label>
    <length>18</length>
    <type>Text</type>
</CustomField>