WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority of the task</description>
    <inlineHelpText>Priority of the task</inlineHelpText>
    <label>Priority</label>
    <length>15</length>
    <type>Text</type>
</CustomField>