WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/RelativeDueDate__c.field-meta.xml
<CustomField>
    <fullName>RelativeDueDate__c</fullName>
    <description>Task data in relative terms like Today, Today + 1 etc.</description>
    <inlineHelpText>Task data in relative terms like Today, Today + 1 etc.</inlineHelpText>
    <label>RelativeDueDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>