WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the task</description>
    <inlineHelpText>Status of the task</inlineHelpText>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>