WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject of the task</description>
    <inlineHelpText>Subject of the task</inlineHelpText>
    <label>Subject</label>
    <length>30</length>
    <type>Text</type>
</CustomField>