WexGit/Wex_DX/force-app/main/default/objects/SetUpAccountSettings__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of the task</description>
    <inlineHelpText>Type of the task</inlineHelpText>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>